introduction, dedication, acknowledgements

--- a/writeup/categorical-cryptography.tex
+++ b/writeup/categorical-cryptography.tex
@@ -386,7 +386,7 @@ maps $X\xto{f}Y$ in $\cat{D}$ such that $(Ff)s = t$\footnote{
   }. Note what then $\cat{C} = \cat{D}$ and $F = 1_\cat{C}$, we recover
   $\state{\cat{C}}$.
 
-We are especially interested in the category
+  Following~\cite{broadbent-karvonen-2022}, are especially interested in the category
 $\state{\cat{C}^2\xto{\otimes}\cat{C}}$. Objects in this category are morphisms
 $I\to X\otimes Y$ in $\cat{C}$, which we can think of as \emph{joint states}.
 When $\cat{C} = \scat{Set}$, every joint state is \emph{independent}, in that it
