--- a/writeup/cryptography.tex
+++ b/writeup/cryptography.tex
@@ -896,6 +896,7 @@ zero-knowledge proof~\cite{ben-or-et-al-1990}.
 \end{ex}
 
 \section{Composition}
+\label{sec:crypto-composition}
 
 \subsection{The Issues at Hand}
 \label{sec:composition-issues}
